# machinecell

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  cabal.project  machinecell.cabal
example/: machinecell-example.cabal
example/counter/: Main.hs  Makefile
example/lib/conduit-adaptor/: Automaton.hs  ConduitAdaptor.hs
example/reader/: reader.hs
example/wx/hello/: Main.hs  Makefile
example/wx/lib/: WxHandler.hs
example/wx/stone/: Main.hs  Makefile
example/xml-parser/: Main.hs
src/Control/Arrow/: *shell*  Machine.hs
src/Control/Arrow/Machine/: AdditionalInstances.hs  ArrowUtil.hs  Core.hs  Detail.hs  Event.hs  Evolution.hs  Exception.hs  Plan.hs  Running.hs  Types.hs  Utils.hs
src/Control/Arrow/Machine/Event/: Internal.hs
src/Control/Arrow/Machine/Internal/: Event.hs
src/Control/Arrow/Machine/Misc/: Discrete.hs  Exception.hs  Pump.hs
src/Control/Arrow/Machine/Plan/: Internal.hs
src/Control/Arrow/Machine/Unsafe/: Prim.hs
test/: Large.hs  LoopUtil.hs  Main.hs  Makefile  RandomProc.hs  TempSpec.hs  doctest.hs  loop.txt  spec.hs
test/Common/: RandomProc.hs
test/Misc/: PumpSpec.hs
test/Types/: BasicSpec.hs  ChoiceSpec.hs  LoopSpec.hs  PlanSpec.hs  RuleSpec.hs  StepExecutionSpec.hs  SwitchSpec.hs
test/Utils/: SourceSpec.hs
